--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b610727",
+   "id": "af731b0b",
    "metadata": {},
    "source": [
     "#### Pattern 8\n",
@@ -444,8 +444,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "44153a42",
+   "execution_count": 13,
+   "id": "0191a620",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1bb00332",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c6761d0f",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "88f10117",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "bd7dd240",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9ecb1bd2",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "da688aa2",
    "metadata": {},
    "outputs": [
@@ -720,8 +720,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d0f65e0e",
+   "execution_count": 20,
+   "id": "d42f4cd9",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2bda5d7",
+   "id": "cf9ee1b5",
    "metadata": {},
    "source": [
     "#### Pattern 15\n",
@@ -763,8 +763,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "1cc690ec",
+   "execution_count": 21,
+   "id": "442a820d",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d88fca54",
+   "id": "47c9105f",
    "metadata": {},
    "source": [
     "#### Pattern 16\n",
@@ -804,8 +804,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "a1795dfd",
+   "execution_count": 22,
+   "id": "70ec2adf",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e56b257",
+   "id": "4c629162",
    "metadata": {},
    "source": [
     "#### Pattern 17\n",
@@ -847,8 +847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "d6d44a6c",
+   "execution_count": 23,
+   "id": "3c5cd6f1",
    "metadata": {},
    "outputs": [
     {
@@ -879,8 +879,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "c8c4590b",
+   "execution_count": 24,
+   "id": "4d9a5902",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eebeb9ca",
+   "id": "7df6b949",
    "metadata": {},
    "source": [
     "#### Pattern 18\n",
@@ -921,8 +921,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "9bf110d7",
+   "execution_count": 25,
+   "id": "7d973827",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b99250",
+   "id": "2f36f5be",
    "metadata": {},
    "source": [
     "#### Pattern 19\n",
@@ -963,17 +963,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "c11743d6",
+   "execution_count": 26,
+   "id": "d9309f68",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "656565\n",
-      "666666\n",
-      "676767\n"
+      "ABC\n",
+      "BCD\n",
+      "CDE\n"
      ]
     }
    ],
@@ -981,9 +981,93 @@
     "int row=1, n=3;\n",
     "while(row<=n){\n",
     "    int col=1;\n",
+    "    char val='A'+row-1;\n",
     "    while(col<=n){\n",
-    "        char val='A';\n",
-    "        cout<<val+row-1;\n",
+    "        cout<<val;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19e1a58d",
+   "metadata": {},
+   "source": [
+    "#### Pattern 20\n",
+    "#### A\n",
+    "#### BB\n",
+    "#### CCC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c6b6dba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BB\n",
+      "CCC\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=3;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        char val='A'+row-1;\n",
+    "        cout<<val;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dfbd2e5",
+   "metadata": {},
+   "source": [
+    "#### Pattern 21\n",
+    "#### A\n",
+    "#### BC\n",
+    "#### CDE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "846f821a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BC\n",
+      "CDE\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=3;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    char val='A'+row-1;\n",
+    "    while(col<=row){\n",
+    "        cout<<val;\n",
     "        val++;\n",
     "        col++;\n",
     "    }\n",
@@ -994,11 +1078,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "242f9583",
+   "execution_count": 37,
+   "id": "a7d12871",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "BC\n",
+      "DEF\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=3;;\n",
+    "char val='A';\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<val;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
