--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af731b0b",
+   "id": "3d6262d4",
    "metadata": {},
    "source": [
     "#### Pattern 8\n",
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0191a620",
+   "id": "8cf79cb2",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d42f4cd9",
+   "id": "c7503e93",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9ee1b5",
+   "id": "cb745213",
    "metadata": {},
    "source": [
     "#### Pattern 15\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "442a820d",
+   "id": "ecb1afb0",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c9105f",
+   "id": "38802748",
    "metadata": {},
    "source": [
     "#### Pattern 16\n",
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "70ec2adf",
+   "id": "de15f1df",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c629162",
+   "id": "fa194962",
    "metadata": {},
    "source": [
     "#### Pattern 17\n",
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3c5cd6f1",
+   "id": "03443041",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4d9a5902",
+   "id": "0fa133d6",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7df6b949",
+   "id": "062b1bd5",
    "metadata": {},
    "source": [
     "#### Pattern 18\n",
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7d973827",
+   "id": "a03f42fc",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f36f5be",
+   "id": "2087a45c",
    "metadata": {},
    "source": [
     "#### Pattern 19\n",
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d9309f68",
+   "id": "cc503656",
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e1a58d",
+   "id": "e234943b",
    "metadata": {},
    "source": [
     "#### Pattern 20\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c6b6dba6",
+   "id": "4585bdc8",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dfbd2e5",
+   "id": "5a57d826",
    "metadata": {},
    "source": [
     "#### Pattern 21\n",
@@ -1048,8 +1048,10 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "846f821a",
-   "metadata": {},
+   "id": "0f19478b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1077,10 +1079,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "a7d12871",
+   "cell_type": "markdown",
+   "id": "8ac03d20",
    "metadata": {},
+   "source": [
+    "#### Pattern 22\n",
+    "#### A\n",
+    "#### BC\n",
+    "#### DEF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f670ad70",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1106,6 +1121,56 @@
     "    row++;\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c42e8c0f",
+   "metadata": {},
+   "source": [
+    "#### Pattern 22\n",
+    "#### A\n",
+    "#### AB\n",
+    "#### ABC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "df53b3f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "AB\n",
+      "ABC\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=3;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        char val='A'+col-1;\n",
+    "        cout<<val;\n",
+    "        val++;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e424792",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
