--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d6262d4",
+   "id": "ff812506",
    "metadata": {},
    "source": [
     "#### Pattern 8\n",
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8cf79cb2",
+   "id": "177c7225",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c7503e93",
+   "id": "60a891cc",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb745213",
+   "id": "1cd0b9f3",
    "metadata": {},
    "source": [
     "#### Pattern 15\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ecb1afb0",
+   "id": "cf83f95d",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38802748",
+   "id": "676dc83f",
    "metadata": {},
    "source": [
     "#### Pattern 16\n",
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "de15f1df",
+   "id": "d6d9de7a",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa194962",
+   "id": "cd708be3",
    "metadata": {},
    "source": [
     "#### Pattern 17\n",
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "03443041",
+   "id": "a261f955",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0fa133d6",
+   "id": "5ba164d8",
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "062b1bd5",
+   "id": "c1221256",
    "metadata": {},
    "source": [
     "#### Pattern 18\n",
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a03f42fc",
+   "id": "f787554a",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2087a45c",
+   "id": "e438bf50",
    "metadata": {},
    "source": [
     "#### Pattern 19\n",
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cc503656",
+   "id": "7c6d63c1",
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e234943b",
+   "id": "e8399fe8",
    "metadata": {},
    "source": [
     "#### Pattern 20\n",
@@ -1005,8 +1005,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "4585bdc8",
+   "execution_count": 27,
+   "id": "4d1ab164",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a57d826",
+   "id": "ca9c48af",
    "metadata": {},
    "source": [
     "#### Pattern 21\n",
@@ -1047,8 +1047,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "0f19478b",
+   "execution_count": 28,
+   "id": "f0b2e518",
    "metadata": {
     "scrolled": true
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac03d20",
+   "id": "775c8bfd",
    "metadata": {},
    "source": [
     "#### Pattern 22\n",
@@ -1091,8 +1091,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "f670ad70",
+   "execution_count": 29,
+   "id": "3c2cd917",
    "metadata": {
     "scrolled": false
    },
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c42e8c0f",
+   "id": "274140b3",
    "metadata": {},
    "source": [
     "#### Pattern 22\n",
@@ -1135,8 +1135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "df53b3f2",
+   "execution_count": 30,
+   "id": "ac767627",
    "metadata": {},
    "outputs": [
     {
@@ -1165,12 +1165,168 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e424792",
+   "cell_type": "markdown",
+   "id": "82c7bfbc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Pattern 23\n",
+    "#### D\n",
+    "#### CD\n",
+    "#### BCD\n",
+    "#### ABCD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "26d7a96f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D\n",
+      "CD\n",
+      "BCD\n",
+      "ABCD\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=4;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        char val='A'+n-(row-col)-1;\n",
+    "        cout<<val;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23612302",
+   "metadata": {},
+   "source": [
+    "#### Pattern 24\n",
+    "#### 4\n",
+    "#### 34\n",
+    "#### 234\n",
+    "#### 1234"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b8daba11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "34\n",
+      "234\n",
+      "1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=4;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<n-(row-col);\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff9a2cfb",
+   "metadata": {},
+   "source": [
+    "#### Pattern 24\n",
+    "<pre>\n",
+    "   *\n",
+    "  **\n",
+    " ***\n",
+    "****\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1f08d70a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   *\n",
+      "  **\n",
+      " ***\n",
+      "****\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=4;\n",
+    "while(row<=n){\n",
+    "    int gap=n-row;\n",
+    "    while(gap){\n",
+    "        cout<<\" \";\n",
+    "        gap--;\n",
+    "    }\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<'*';\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "661f5231",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=4;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        cout<<\"*\";\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
