--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -153,9 +153,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 1\n",
-    "## ***\n",
-    "## ***\n",
-    "## ***"
+    "<pre>\n",
+    "***\n",
+    "***\n",
+    "***\n",
+    "</pre>"
    ]
   },
   {
@@ -193,9 +195,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 2\n",
-    "#### 111\n",
-    "#### 222\n",
-    "#### 333"
+    "<pre>\n",
+    "111\n",
+    "222\n",
+    "333\n",
+    "</pre>"
    ]
   },
   {
@@ -233,9 +237,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 3\n",
-    "#### 123\n",
-    "#### 123\n",
-    "#### 123"
+    "<pre>\n",
+    "123\n",
+    "123\n",
+    "123\n",
+    "</pre>"
    ]
   },
   {
@@ -273,9 +279,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 4\n",
-    "#### 321\n",
-    "#### 321\n",
-    "#### 321"
+    "<pre>\n",
+    "321\n",
+    "321\n",
+    "321\n",
+    "</pre>"
    ]
   },
   {
@@ -315,9 +323,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 5\n",
-    "#### 333\n",
-    "#### 222\n",
-    "#### 111"
+    "<pre>\n",
+    "333\n",
+    "222\n",
+    "111\n",
+    "</pre>"
    ]
   },
   {
@@ -355,9 +365,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 6\n",
-    "#### 123\n",
-    "#### 456\n",
-    "#### 789"
+    "<pre>\n",
+    "123\n",
+    "456\n",
+    "789\n",
+    "</pre>"
    ]
   },
   {
@@ -396,9 +408,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 7\n",
-    "#### 987\n",
-    "#### 654\n",
-    "#### 321"
+    "<pre>\n",
+    "987\n",
+    "654\n",
+    "321\n",
+    "</pre>"
    ]
   },
   {
@@ -433,19 +447,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff812506",
+   "id": "ad0c1a03",
    "metadata": {},
    "source": [
     "#### Pattern 8\n",
-    "#### 123\n",
-    "#### 234\n",
-    "#### 345"
+    "<pre>\n",
+    "123\n",
+    "234\n",
+    "345\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "177c7225",
+   "id": "e72e6fc3",
    "metadata": {},
    "outputs": [
     {
@@ -477,9 +493,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 9\n",
-    "## *\n",
-    "## **\n",
-    "## ***"
+    "<pre>\n",
+    "*\n",
+    "**\n",
+    "***\n",
+    "</pre>"
    ]
   },
   {
@@ -517,9 +535,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 10\n",
-    "## ***\n",
-    "## **\n",
-    "## *"
+    "<pre>\n",
+    "***\n",
+    "**\n",
+    "*\n",
+    "</pre>"
    ]
   },
   {
@@ -557,9 +577,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 11\n",
-    "#### 1\n",
-    "#### 23\n",
-    "#### 456"
+    "<pre>\n",
+    "1\n",
+    "23\n",
+    "456\n",
+    "</pre>"
    ]
   },
   {
@@ -598,9 +620,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 12\n",
-    "#### 123\n",
-    "#### 45\n",
-    "#### 6"
+    "<pre>\n",
+    "123\n",
+    "45\n",
+    "6\n",
+    "</pre>"
    ]
   },
   {
@@ -639,9 +663,11 @@
    "metadata": {},
    "source": [
     "#### Pattern 13\n",
-    "#### 654\n",
-    "#### 32\n",
-    "#### 1"
+    "<pre>\n",
+    "654\n",
+    "32\n",
+    "1\n",
+    "</pre>"
    ]
   },
   {
@@ -680,10 +706,12 @@
    "metadata": {},
    "source": [
     "#### Pattern 14\n",
-    "#### 1\n",
-    "#### 23\n",
-    "#### 345\n",
-    "#### 4567"
+    "<pre>\n",
+    "1\n",
+    "23\n",
+    "345\n",
+    "4567\n",
+    "</pre>"
    ]
   },
   {
@@ -721,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "60a891cc",
+   "id": "469ade58",
    "metadata": {},
    "outputs": [
     {
@@ -751,20 +779,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd0b9f3",
+   "id": "c5bc843a",
    "metadata": {},
    "source": [
     "#### Pattern 15\n",
-    "#### 1\n",
-    "#### 21\n",
-    "#### 321\n",
-    "#### 4321"
+    "<pre>\n",
+    "1\n",
+    "21\n",
+    "321\n",
+    "4321\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cf83f95d",
+   "id": "40462867",
    "metadata": {},
    "outputs": [
     {
@@ -793,19 +823,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "676dc83f",
+   "id": "8bb1c6c3",
    "metadata": {},
    "source": [
     "#### Pattern 16\n",
-    "#### AAA\n",
-    "#### BBB\n",
-    "#### CCC"
+    "<pre>\n",
+    "AAA\n",
+    "BBB\n",
+    "CCC\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d6d9de7a",
+   "id": "cb68abc2",
    "metadata": {},
    "outputs": [
     {
@@ -836,19 +868,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd708be3",
+   "id": "05149778",
    "metadata": {},
    "source": [
     "#### Pattern 17\n",
-    "#### ABC\n",
-    "#### ABC\n",
-    "#### ABC"
+    "<pre>\n",
+    "ABC\n",
+    "ABC\n",
+    "ABC\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a261f955",
+   "id": "6e45093f",
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5ba164d8",
+   "id": "c7eaf1c4",
    "metadata": {},
    "outputs": [
     {
@@ -910,19 +944,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1221256",
+   "id": "d03eb595",
    "metadata": {},
    "source": [
     "#### Pattern 18\n",
-    "#### ABC\n",
-    "#### DEF\n",
-    "#### GHI"
+    "<pre>\n",
+    "ABC\n",
+    "DEF\n",
+    "GHI\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f787554a",
+   "id": "febeb470",
    "metadata": {},
    "outputs": [
     {
@@ -952,19 +988,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e438bf50",
+   "id": "df9b669c",
    "metadata": {},
    "source": [
     "#### Pattern 19\n",
-    "#### ABC\n",
-    "#### BCD\n",
-    "#### CDF"
+    "<pre>\n",
+    "ABC\n",
+    "BCD\n",
+    "CDE\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7c6d63c1",
+   "id": "a096336d",
    "metadata": {},
    "outputs": [
     {
@@ -994,19 +1032,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8399fe8",
+   "id": "965a1a92",
    "metadata": {},
    "source": [
     "#### Pattern 20\n",
-    "#### A\n",
-    "#### BB\n",
-    "#### CCC"
+    "<pre>\n",
+    "A\n",
+    "BB\n",
+    "CCC\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4d1ab164",
+   "id": "365435b5",
    "metadata": {},
    "outputs": [
     {
@@ -1036,19 +1076,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca9c48af",
+   "id": "1da1b890",
    "metadata": {},
    "source": [
     "#### Pattern 21\n",
-    "#### A\n",
-    "#### BC\n",
-    "#### CDE"
+    "<pre>\n",
+    "A\n",
+    "BC\n",
+    "CDE\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f0b2e518",
+   "id": "67f6cf49",
    "metadata": {
     "scrolled": true
    },
@@ -1080,19 +1122,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "775c8bfd",
+   "id": "496926f7",
    "metadata": {},
    "source": [
     "#### Pattern 22\n",
-    "#### A\n",
-    "#### BC\n",
-    "#### DEF"
+    "<pre>\n",
+    "A\n",
+    "BC\n",
+    "DEF\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3c2cd917",
+   "id": "fbc1cb04",
    "metadata": {
     "scrolled": false
    },
@@ -1124,19 +1168,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "274140b3",
+   "id": "a5f0d5d0",
    "metadata": {},
    "source": [
     "#### Pattern 22\n",
-    "#### A\n",
-    "#### AB\n",
-    "#### ABC"
+    "<pre>\n",
+    "A\n",
+    "AB\n",
+    "ABC\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ac767627",
+   "id": "f928db00",
    "metadata": {},
    "outputs": [
     {
@@ -1166,20 +1212,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82c7bfbc",
+   "id": "e93b5755",
    "metadata": {},
    "source": [
     "#### Pattern 23\n",
-    "#### D\n",
-    "#### CD\n",
-    "#### BCD\n",
-    "#### ABCD"
+    "<pre>\n",
+    "D\n",
+    "CD\n",
+    "BCD\n",
+    "ABCD\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "26d7a96f",
+   "id": "d0614ede",
    "metadata": {},
    "outputs": [
     {
@@ -1209,20 +1257,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23612302",
+   "id": "5b890ebb",
    "metadata": {},
    "source": [
     "#### Pattern 24\n",
-    "#### 4\n",
-    "#### 34\n",
-    "#### 234\n",
-    "#### 1234"
+    "<pre>\n",
+    "4\n",
+    "34\n",
+    "234\n",
+    "1234\n",
+    "</pre>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b8daba11",
+   "id": "dd53bc51",
    "metadata": {},
    "outputs": [
     {
@@ -1251,10 +1301,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9a2cfb",
+   "id": "e2708851",
    "metadata": {},
    "source": [
-    "#### Pattern 24\n",
+    "#### Pattern 25\n",
     "<pre>\n",
     "   *\n",
     "  **\n",
@@ -1266,8 +1316,10 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1f08d70a",
-   "metadata": {},
+   "id": "5a153f4b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1299,28 +1351,249 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "643ad68a",
+   "metadata": {},
+   "source": [
+    "#### Pattern 26\n",
+    "<pre>\n",
+    "   1\n",
+    "  22\n",
+    " 333\n",
+    "4444\n",
+    "</pre>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "661f5231",
+   "execution_count": 39,
+   "id": "162b1373",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "****\n",
-      "****\n",
-      "****\n",
-      "****\n"
+      "   1\n",
+      "  22\n",
+      " 333\n",
+      "4444\n"
      ]
     }
    ],
    "source": [
     "int row=1, n=4;\n",
     "while(row<=n){\n",
+    "    int gap=n-row;\n",
+    "    while(gap){\n",
+    "        cout<<\" \";\n",
+    "        gap--;\n",
+    "    }\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<row;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2335460",
+   "metadata": {},
+   "source": [
+    "#### Pattern 27\n",
+    "<pre>\n",
+    "   1\n",
+    "  12\n",
+    " 123\n",
+    "1234\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6382726a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   1\n",
+      "  12\n",
+      " 123\n",
+      "1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1, n=4;\n",
+    "while(row<=n){\n",
+    "    int gap=n-row;\n",
+    "    while(gap){\n",
+    "        cout<<\" \";\n",
+    "        gap--;\n",
+    "    }\n",
+    "    int col=1;\n",
+    "    while(col<=row){\n",
+    "        cout<<col;\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2bfd99a",
+   "metadata": {},
+   "source": [
+    "#### Pattern 28\n",
+    "<pre>\n",
+    "****\n",
+    " ***\n",
+    "  **\n",
+    "   *\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "daa0e8ba",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****\n",
+      " ***\n",
+      "  **\n",
+      "   *\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1,n=4;\n",
+    "while(row<=n){\n",
     "    int col=1;\n",
     "    while(col<=n){\n",
-    "        cout<<\"*\";\n",
+    "        if(col<row){\n",
+    "            cout<<\" \";\n",
+    "        }\n",
+    "        else{\n",
+    "            cout<<\"*\";\n",
+    "        }\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "326afd34",
+   "metadata": {},
+   "source": [
+    "#### Pattern 29\n",
+    "<pre>\n",
+    "1234\n",
+    " 234\n",
+    "  34\n",
+    "   4\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d757fe54",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234\n",
+      " 234\n",
+      "  34\n",
+      "   4\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1,n=4;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        if(col<row){\n",
+    "            cout<<\" \";\n",
+    "        }\n",
+    "        else{\n",
+    "            cout<<col;\n",
+    "        }\n",
+    "        col++;\n",
+    "    }\n",
+    "    cout<<endl;\n",
+    "    row++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c620c61",
+   "metadata": {},
+   "source": [
+    "#### Pattern 30\n",
+    "<pre>\n",
+    "1111\n",
+    " 222\n",
+    "  33\n",
+    "   4\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "fcf94720",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1111\n",
+      " 222\n",
+      "  33\n",
+      "   4\n"
+     ]
+    }
+   ],
+   "source": [
+    "int row=1,n=4;\n",
+    "while(row<=n){\n",
+    "    int col=1;\n",
+    "    while(col<=n){\n",
+    "        if(col<row){\n",
+    "            cout<<\" \";\n",
+    "        }\n",
+    "        else{\n",
+    "            cout<<row;\n",
+    "        }\n",
     "        col++;\n",
     "    }\n",
     "    cout<<endl;\n",
