--- a/CPP_Practice.ipynb
+++ b/CPP_Practice.ipynb
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "id": "f0291618",
    "metadata": {},
    "outputs": [
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "id": "a5485d0f",
    "metadata": {
     "scrolled": true
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "b3f4d317",
    "metadata": {
     "scrolled": true
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "id": "b3396497",
    "metadata": {
     "scrolled": true
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "6f57c6f4",
    "metadata": {},
    "outputs": [
@@ -1600,6 +1600,234 @@
     "    row++;\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62033dba",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f7b538e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70a86bcc",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "859d3ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ec47d7c",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25eaef6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5b8808a",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5fca166",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96bbaa5d",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b10f8980",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b7eae25",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f51a87d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c48ab64e",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "694e314d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa30fd24",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "634b2c96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fec21134",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bd97c85",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f5dd979",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fd56300",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be8969a6",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ed2c08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90bdb7c9",
+   "metadata": {},
+   "source": [
+    "#### Pattern \n",
+    "<pre>\n",
+    "\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dead2d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
